--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -5,21 +5,29 @@
   "dependencies": {
     "add": "^2.0.6",
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "firebase": "^5.2.0",
+    "gsap": "^2.0.1",
     "moment": "^2.22.2",
+    "popmotion-pose": "^2.1.0",
+    "primereact": "^2.0.0-rc.1",
     "react": "^16.4.1",
     "react-csv": "^1.0.14",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.4.1",
+    "react-gsap-enhancer": "^0.3.0",
+    "react-particles-js": "^2.3.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-strap": "^0.0.1",
     "react-theme-switch": "^0.1.4",
+    "react-transition-group": "^2.5.0",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "styled-components": "^3.3.3",
+    "throttle-debounce": "^2.0.1",
     "yarn": "^1.7.0"
   },
   "scripts": {
